--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -15,8 +15,22 @@
         <div class="main-page">
             <div class="main-top"></div>
             <div class="main-bottom">
+
                 <!-- web app -->
-                <div class="container"></div>
+                <div class="container">
+                    <!-- HEADER -->
+                    <header>
+                        <!-- Left header -->
+                        <div class="user-bar">prova</div>
+                        <!-- end left header -->
+                        <!-- right header -->
+                        <div class="user-bar">prova</div>
+                        <!-- end right header -->
+
+                    </header>
+                    <!-- END HEADER -->
+
+                </div>
                 <!-- end web app -->
             </div>
 
