--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>BOOLZAPP</title>
 </head>
@@ -21,10 +22,38 @@
                     <!-- HEADER -->
                     <header>
                         <!-- Left header -->
-                        <div class="user-bar">prova</div>
+                        <div class="header-bar left">
+                            <div class="user-info">
+                                <div class="user-icon">
+                                    <img src="img/avatar_io.jpg" alt="my user icon">
+                                </div>
+                                <div class="user-name">Nome Utente</div>
+                            </div>
+
+                            <div class="user-options">
+                                <span class="icons"><i class="fas fa-circle-notch"></i></span>
+                                <span class="icons"><i class="fas fa-comment-alt"></i></span>
+                                <span class="icons"><i class="fas fa-ellipsis-v"></i></span>
+                            </div>
+                        </div>
                         <!-- end left header -->
                         <!-- right header -->
-                        <div class="user-bar">prova</div>
+                        <div class="header-bar right">
+                            <div class="user-info">
+                                <div class="user-icon">
+                                    <img src="img/avatar_3.jpg" alt="Samuele icon">
+                                </div>
+                                <div class="user-name">Samuele
+                                    <div class="text">ultimo accesso oggi alle</div>
+                                </div>
+                            </div>
+
+                            <div class="user-options">
+                                <span class="icons"><i class="fas fa-search"></i></span>
+                                <span class="icons"><i class="fas fa-paperclip"></i></span>
+                                <span class="icons"><i class="fas fa-ellipsis-v"></i></span>
+                            </div>
+                        </div>
                         <!-- end right header -->
 
                     </header>
