added notification bar

--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -24,10 +24,10 @@
                         <!-- Left header -->
                         <div class="header-bar left">
                             <div class="user-info">
-                                <div class="user-icon">
+                                <div class="round-icon">
                                     <img src="img/avatar_io.jpg" alt="my user icon">
                                 </div>
-                                <div class="user-name">Nome Utente</div>
+                                <div class="main-text">Nome Utente</div>
                             </div>
 
                             <div class="user-options">
@@ -40,10 +40,10 @@
                         <!-- right header -->
                         <div class="header-bar right">
                             <div class="user-info">
-                                <div class="user-icon">
+                                <div class="round-icon">
                                     <img src="img/avatar_3.jpg" alt="Samuele icon">
                                 </div>
-                                <div class="user-name">Samuele
+                                <div class="main-text">Samuele
                                     <div class="text">ultimo accesso oggi alle</div>
                                 </div>
                             </div>
@@ -58,8 +58,28 @@
 
                     </header>
                     <!-- END HEADER -->
+                    <!-- MAIN -->
+                    <div class="main-app">
+                        <!-- contact col -->
+                        <div class="contact-col left">
+                            <div class="notifications">
+                                <div class="bell"><i class="fas fa-bell-slash"></i></div>
+                                <div class="main-text">RIcevi notifiche di nuovi messaggi
+                                    <div><a href="#">Attiva notifiche desktop</a></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- end contact col -->
+                        <!-- chat col -->
+                        <div class="chat-col right"></div>
+                        <!-- end chat col -->
+                    </div>
+                    
+
+                    <!-- END MAIN -->
 
                 </div>
+                <!-- end container -->
                 <!-- end web app -->
             </div>
 
