--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -68,6 +68,12 @@
                                     <div><a href="#">Attiva notifiche desktop</a></div>
                                 </div>
                             </div>
+                            <!-- end notification bar -->
+                            <!-- search conversation bar -->
+                            <div class="conversations">
+                                <input type="text" placeholder="Cerca o inizia una nuova chat">
+                            </div>
+                            <!-- end search conversation bar -->
                         </div>
                         <!-- end contact col -->
                         <!-- chat col -->
