added contact list

--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -71,9 +71,54 @@
                             <!-- end notification bar -->
                             <!-- search conversation bar -->
                             <div class="conversations">
-                                <input type="text" placeholder="Cerca o inizia una nuova chat">
+                                <input type="search" placeholder="cerca o inizia una nuova chat">
                             </div>
                             <!-- end search conversation bar -->
+
+                            <!-- CONTACTS LIST -->
+                            <div class="contacts">
+                                <ul>
+                                    <!-- single template -->
+                                    <li>
+                                        <div class="single-contact">
+                                            <div class="contact-icon"><img src="img/avatar_1.jpg" alt="avatar 1 icon"></div>
+                                            <div class="main-text">Michele</div>
+                                        </div>
+                                    </li>
+                                    <!-- single template -->
+                                    <li>
+                                        <div class="single-contact is-selected-contact">
+                                            <div class="contact-icon"><img src="img/avatar_2.jpg" alt="avatar 2 icon"></div>
+                                            <div class="main-text">Fabio</div>
+                                        </div>
+                                    </li>
+                                    <!-- single template -->
+                                    <li>
+                                        <div class="single-contact">
+                                            <div class="contact-icon"><img src="img/avatar_3.jpg" alt="avatar 3 icon"></div>
+                                            <div class="main-text">Samuele</div>
+                                        </div>
+                                    </li>
+                                    <!-- single template -->
+                                    <li>
+                                        <div class="single-contact">
+                                            <div class="contact-icon"><img src="img/avatar_4.jpg" alt="avatar 4 icon"></div>
+                                            <div class="main-text">Ettore</div>
+                                        </div>
+                                    </li>
+                                    <!-- single template -->
+                                    <li>
+                                        <div class="single-contact">
+                                            <div class="contact-icon"><img src="img/avatar_5.jpg" alt="avatar 5 icon"></div>
+                                            <div class="main-text">Luigi</div>
+                                        </div>
+                                    </li>
+                                    <!-- single template -->
+                                </ul>
+                            </div>
+
+                            <!-- END CONTACTS LIST -->
+
                         </div>
                         <!-- end contact col -->
                         <!-- chat col -->
