--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -123,12 +123,16 @@
                         <!-- end contact col -->
                         <!-- CHAT COL -->
                         <div class="chat-col right">
-                            <div class="chat-list">
+                            <div class="chat-list ">
                                 <ul>
                                     <!-- single template  -->
                                     <li>
-                                        <div class="single-chat main-text">Ciao come stai</div>
+                                        <div class="single-chat received">
+                                            <div class="main-text">Ciao come stai, io tutto bene e tu come stai?</div>
+                                            <div class="timer">21/04/21</div>
+                                        </div>
                                     </li>
+                                    <!-- end single template -->
                                     
 
                                 </ul>
