added chat messages

--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -126,8 +126,16 @@
                             <div class="chat-list ">
                                 <ul>
                                     <!-- single template  -->
-                                    <li>
-                                        <div class="single-chat received">
+                                    <li class="sent">
+                                        <div class="single-chat">
+                                            <div class="main-text">Ciao come stai, io tutto bene e tu come stai?</div>
+                                            <div class="timer">21/04/21</div>
+                                        </div>
+                                    </li>
+                                    <!-- end single template -->
+                                     <!-- single template  -->
+                                     <li>
+                                        <div class="single-chat">
                                             <div class="main-text">Ciao come stai, io tutto bene e tu come stai?</div>
                                             <div class="timer">21/04/21</div>
                                         </div>
@@ -137,6 +145,8 @@
 
                                 </ul>
                             </div>
+
+                            <!-- send message bar -->
 
                             <div class="send-message">
                                 <span class="icons"><i class="far fa-smile"></i></span>
