--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -61,7 +61,7 @@
                     <!-- MAIN -->
                     <div class="main-app">
                         <!-- contact col -->
-                        <div class="contact-col left">
+                        <div class="main-cols left">
                             <div class="notifications">
                                 <div class="bell"><i class="fas fa-bell-slash"></i></div>
                                 <div class="main-text">RIcevi notifiche di nuovi messaggi
@@ -122,7 +122,7 @@
                         </div>
                         <!-- end contact col -->
                         <!-- CHAT COL -->
-                        <div class="chat-col right">
+                        <div class="main-cols right">
                             <div class="chat-list ">
                                 <ul>
                                     <!-- single template  -->
