single chat max-width

--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -109,7 +109,7 @@
                                      <!-- single template messaggio ricevuto -->
                                      <li class="received">
                                         <div class="single-chat">
-                                            <div class="main-text">Ciao come stai, io tutto bene e tu come stai?</div>
+                                            <div class="main-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur a adipisci explicabo quos voluptates delectus aspernatur et, consectetur accusamus itaque eaque, illo debitis quam sapiente ipsam quis, qui cum odit!</div>
                                             <div class="timer">{{messageDate}}</div>
                                         </div>
                                     </li>
