--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -101,7 +101,7 @@
                                     <!-- single template  messaggio inviato-->
                                     <li class="sent">
                                         <div class="single-chat">
-                                            <div class="main-text">Ciao come stai, io tutto bene e tu come stai?</div>
+                                            <div class="main-text">ciao</div>
                                             <div class="timer">{{messageDate}}</div>
                                         </div>
                                     </li>
