--- a/MILESTONE-1/index.html
+++ b/MILESTONE-1/index.html
@@ -71,7 +71,12 @@
                             <!-- end notification bar -->
                             <!-- search conversation bar -->
                             <div class="conversations">
-                                <input type="search" placeholder="cerca o inizia una nuova chat">
+                                
+                                <div class="input-wrapper">
+                                    <span class="icons"><i class="fas fa-search"></i></span>
+                                    <input  type="search" placeholder="cerca o inizia una nuova chat">
+                                </div>
+                                
                             </div>
                             <!-- end search conversation bar -->
 
@@ -94,6 +99,7 @@
 
                         </div>
                         <!-- end contact col -->
+
                         <!-- CHAT COL -->
                         <div class="main-cols right">
                             <div class="chat-list ">
