--- a/MILESTONE-3/index.html
+++ b/MILESTONE-3/index.html
@@ -119,7 +119,7 @@
 
                             <div class="send-message">
                                 <span class="icons"><i class="far fa-smile"></i></span>
-                                <input v-model="myAnswer" @keyup.enter="answer(); timeAnswer();" type="text" placeholder="scrivi un messaggio">
+                                <input v-model="myAnswer" @keyup.enter="answer()" type="text" placeholder="scrivi un messaggio">
                                 <span class="icons"><i class="fas fa-microphone"></i></span>
                             </div>
                             
