--- a/MILESTONE-5/index.html
+++ b/MILESTONE-5/index.html
@@ -103,13 +103,13 @@
                             <div class="chat-list ">
                                 <ul>
                                     <!-- single template  messaggi inviati/ricevuti-->
-                                    <li v-for=" messages in contacts[activeContact].messages" :class="messages.status">
+                                    <li v-for=" (messages,index) in contacts[activeContact].messages" :class="messages.status">
                                         <div class="single-chat">
-                                            <span class="icons chevron"><i class="fas fa-chevron-down"></i></span>
+                                            <span @click="showOptions(index)" class="icons chevron"><i class="fas fa-chevron-down"></i></span>
                                             <div class="main-text">{{messages.text}}</div>
                                             <div class="timer">{{messages.date}}</div>
                                             <!-- menu a tendina -->
-                                            <div class="hidden-menu hidden">
+                                            <div  class="hidden-menu" :class="{'hidden':index === activeContact}">
                                                 <div class="text">Message info</div>
                                                 <div class="text">Delete message</div>
                                             </div>
